[gd_scene load_steps=3 format=2]

[ext_resource path="res://Character Creation(V2.0)/Main Overlay.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.607843, 0.0196078, 0.0196078, 1 )

[node name="Overlay" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "1920x1080"
}

[node name="Character_Creator" type="Panel" parent="."]
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info_Pannel" type="Panel" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 130.0
margin_bottom = 20.0
text = "Toggle Info-Screen"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_InfoScreen_toggle_signal"]
